made some changes in margin

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
     </section>
     <!-- Section 6 of the page -->
-    <section class="flex flex-col justify-center items-center  mb-96 mt-20 max-[768px]:mb-0">
+    <section class="flex flex-col justify-center items-center  mb-96 mt-20 ">
         <div class="container py-lg">
             <span class="text-Mpurple1 font-Mhead font-medium text-base">Why swipe</span>
             <h2 class="font-Mhead font-medium text-h2 w-full">A tech-first approach to finance</h2>
